--- a/pages/what_is_pathway/s_version/HPW.html
+++ b/pages/what_is_pathway/s_version/HPW.html
@@ -51,7 +51,7 @@
 					&nbsp;
 				</li>
 				<li class="header-column pull-left">
-					<a class="navbar-brand img-responsive hidden-xs" href="../../../index.htm"><img id="pathway-logo" width="280px" src="../../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img src="../../../img/mobile-logo.png" width="159" height="48" id="pathway-mobile-logo"></a>
+					<a class="navbar-brand img-responsive hidden-xs" href="../../../index.htm"><img id="pathway-logo" width="280px" src="../../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img src="../../../img/mobile-logo.png" id="pathway-mobile-logo"></a>
 				</li>
 				<li class="header-column pull-right">
 					<a class="header_contact hidden-xs pull-left" href="#contactUs">Contact Us <img src="../../../img/speechbubble.png" width="13" height="11" alt="speech"></a>
@@ -95,6 +95,7 @@
 			</nav>
 		</div>
 	</div>
+	<!-- Breadcrumb start -->
 	<div class="breadCrumbHolder module hidden-xs">
 		<div class="container">
 			<div id="breadCrumb" class="breadCrumb module">
@@ -107,6 +108,7 @@
 			</div>
 		</div>
 	</div>
+	<!-- Breadcrumb end -->	
 	<div id="sub_nav" class="nav-wrapper affix navbar">
 	</div>
 </header>
@@ -126,7 +128,7 @@
 			<div class="hero pf-page-header">
 				<img src="../../../img/wip/icons/standard.png" alt="standardLogo">
 				<h1 id="Standard" class="page-title">Standard Version</h1>
-				<p class="page-summary">For students who are fully proficient in English.</p> 
+				<p class="page-summary">For students who are proficient in English.</p> 
 			</div>
 			<div class="pf-section">
 				<div class="pf-page-header">
@@ -134,7 +136,7 @@
 					<h2 id="HowPathwayWorks" class="subheading">How Pathway Works</h2>
 				</div>
 				<h3 id="OnlineAcademicCourses" class="p-heading red">Online Academic Courses</h3>
-				<p>During each of the three semesters, students take one online academic class from BYU-Idaho as well as one religion class. The three academic classes are designed to give students the confidence and skills needed to succeed in college and include: Pathway Life Skills (GS 120), Basic Writing (ENG 106), Personal Finance (Math 100G) </p>
+				<p>During each of the three semesters, students take one online academic class from BYU-Idaho as well as one religion class. The three academic classes are designed to give students the confidence and skills needed to succeed in college and include Pathway Life Skills (GS 120), Basic Writing (ENG 106), and Personal Finance (Math 100G). </p>
 				<!-- <ul>
 					<li>
 						Pathway Life Skills (GS 120)
@@ -191,6 +193,8 @@
 				
 			</div>
 		</div>
+
+		<br>
 		
 		<!-- Sidebar Start -->
 <div class="col-xs-6 col-sm-4 pull-right" id="sidebar" role="navigation">
@@ -235,7 +239,7 @@
 						Cost</a>
                         <ul class="nav">
 							<li>
-								<a href="cost_calc_tuition.html">Calculate Tutition</a>
+								<a href="cost_calc_tuition.html">Calculate Tuition</a>
 							</li>
 							<li>
 								<a href="cost.html#FinancialAid">Financial Aid</a>
