--- a/pages/what_is_pathway/s_version/cost.html
+++ b/pages/what_is_pathway/s_version/cost.html
@@ -124,7 +124,7 @@
 				<img src="../../../img/wip/icons/standard.png" alt="standardLogo">
 				<h1 id="Standard" class="page-title">Standard Version</h1>
 				
-					<p class="page-summary">For students who are fully proficient in English.</p>
+					<p class="page-summary">For students who are proficient in English.</p>
 			
 			</div>
 			<div class="pf-section">
@@ -145,7 +145,7 @@
 
 				<p>Pathway students who pursue a degree through BYU-Idaho's Online Degree Program after Pathway continue to pay their local Pathway tuition rate. Pathway tuition may increase annually.</p>
 
-				<p>Pathway students who choose to continue their education on-campus after Pathway will pay regular on-campus tuition.</p>
+				<p>Pathway students who choose to continue their education on campus after Pathway will pay regular on-campus tuition.</p>
 				
 				<h3 id="FinancialAid" class="p-heading red">Financial Aid</h3>
 				<p>Financial aid is not available for Pathway students during their first year. However, U.S. students who have a high school diploma or GED may apply for federal financial aid after they complete Pathway and if they are accepted into a degree-seeking program.</p>
@@ -201,7 +201,7 @@
 						Cost</a>
                         <ul class="nav drop-down">
 							<li>
-								<a href="cost_calc_tuition.html">Calculate Tutition</a>
+								<a href="cost_calc_tuition.html">Calculate Tuition</a>
 							</li>
 							<li>
 								<a href="cost.html#FinancialAid">Financial Aid</a>
