--- a/pages/what_is_pathway/what_is_pathway.html
+++ b/pages/what_is_pathway/what_is_pathway.html
@@ -51,7 +51,7 @@
 					&nbsp;
 				</li>
 				<li class="header-column pull-left">
-					<a class="navbar-brand img-responsive hidden-xs" href="../../index.htm"><img id="pathway-logo" width="280px" src="../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img src="../../img/mobile-logo.png" width="159" height="48" id="pathway-mobile-logo"></a>
+					<a class="navbar-brand img-responsive hidden-xs" href="../../index.htm"><img id="pathway-logo" width="280px" src="../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img src="../../img/mobile-logo.png" id="pathway-mobile-logo"></a>
 				</li>
 				<li class="header-column pull-right">
 					<a class="header_contact hidden-xs pull-left" href="#contactUs">Contact Us <img src="../../img/speechbubble.png" width="13" height="11" alt="speech"></a>
@@ -140,7 +140,7 @@
 				</div>
 
 				<div class="caption-block red">
-				<p>To watch more videos or learn more about about Pathway, visit our media page, or click on one of the social media links at the bottom of the page.</p>
+				<p>Visit our Media Page or use the social media links below to watch more Pathway videos.</p>
 				</div>
 
 					
