--- a/pages/local_leaders/getting-started.html
+++ b/pages/local_leaders/getting-started.html
@@ -51,7 +51,7 @@
    						&nbsp;
    					</li>
    					<li class="header-column pull-left">
-   						<a class="navbar-brand img-responsive hidden-xs" href="../../index.htm"><img id="pathway-logo" width="280px" src="../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img src="../../img/mobile-logo.png" width="159" height="48" id="pathway-mobile-logo"></a>
+   						<a class="navbar-brand img-responsive hidden-xs" href="../../index.htm"><img id="pathway-logo" width="280px" src="../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img src="../../img/mobile-logo.png" id="pathway-mobile-logo"></a>
    					</li>
    					<li class="header-column pull-right">
    						<a class="header_contact hidden-xs pull-left" href="#contactUs">Contact Us <img src="../../img/speechbubble.png" width="13" height="11" alt="speech"></a>
@@ -131,7 +131,7 @@
    				</div>
    				<div class="pf-section no-icon">
    					<div class="">
-   						<img class="img-responsive img-space" style="width:30%; float:left;" src="../../img/local-leaders/leadership_guide.png" />
+   						<img class="img-space" style="width:30%; float:left;" src="../../img/local-leaders/leadership_guide.png" />
    					</div>
    					<div style="width:65%; float:left; margin:203px 0 60px 15px;">
    						<p class="click-here blue">
@@ -169,7 +169,7 @@
    					<div class="pf-section no-icon">
    						<h3 class="p-heading blue">Agent Stake President Assignment</h3>
    						<p class="main-content">The effort to launch Pathway in an area can gain traction when a stake president either volunteers or is delegated to take the lead. Generally this means completing and submitting an <a style="color:#dc4831;;" href="request-a-site.html">application to formally request Pathway,</a> coordinating the selection of <a style="color:#dc4831;" href="#">Church Service Missionaries</a> to administer the program, and serving as a point of contact for BYU-Idaho until service missionaries are in place.</p>
-   						<p class=""><a style="color:#dc4831;" href="#">Learn more</a> about the roles of Pathway service missionaries, and download the <a style="color:#dc4831;;" href="#">Church Service Missionary Form.</a></p>
+   						<p class=""><a style="color:#dc4831;" href="roles-responsibilities.html">Learn more</a> about the roles of Pathway service missionaries, and download the <a style="color:#dc4831;;" href="#">Church Service Missionary Form.</a></p>
    					</div>
    					<div class="pf-section no-icon">
    						<h3 class="p-heading blue">Pathway Group Types and Locations</h3>
@@ -198,8 +198,9 @@
             </div>
 
    						<img style="float:left; width:205" id="location-icon" class="img-responsive img-space"src="../../img/local-leaders/pathway_red.png" width="55" height="55" />
-              <p class="red note" style="float:left; width:85%; margin:20px 0 0 10px;">If you are ready to request Pathway in your area, click here to access the Pathway application.</p>
+              <p class="red note" style="float:left; width:85%; margin:20px 0 0 10px;">If you are ready to request Pathway in your area, <a href="request-a-site.html">click here</a> to access the Pathway application.</p>
    					</div>
+         
 
    				</div>
 
