--- a/pages/local_leaders/implementation.html
+++ b/pages/local_leaders/implementation.html
@@ -51,7 +51,7 @@
    						&nbsp;
    					</li>
    					<li class="header-column pull-left">
-   						<a class="navbar-brand img-responsive hidden-xs" href="../../index.htm"><img id="pathway-logo" width="280px" src="../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img src="../../img/mobile-logo.png" width="159" height="48" id="pathway-mobile-logo"></a>
+   						<a class="navbar-brand img-responsive hidden-xs" href="../../index.htm"><img id="pathway-logo" width="280px" src="../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img src="../../img/mobile-logo.png" id="pathway-mobile-logo"></a>
    					</li>
    					<li class="header-column pull-right">
    						<a class="header_contact hidden-xs pull-left" href="#contactUs">Contact Us <img src="../../img/speechbubble.png" width="13" height="11" alt="speech"></a>
@@ -167,6 +167,7 @@
    					<h4 class="p-heading2 blue">INTERNATIONAL LOCATIONS</h4>
    					<p>International locations depend on their respective Area Presidency to support and request a Pathway site. Therefore, we suggest requests go through appropriate ecclesiastical channels, including bishops, stake presidents and area seventies, who in turn can brooch the subject with the Area Presidency. Once Area Presidencies decide that Pathway would bless their area members, they may contact the International Pathway director at BYU-Idaho to start conversations on the approval process, which requires not only internal approval but also CES Executive Committee and Board approvals (sought three times per year). Once approval is received, preparations will begin to open the new site as soon as reasonably possible.</p>
    				</div>
+          <br>
    			</div>
 
            <!-- Sidebar Start -->
@@ -200,7 +201,7 @@
         <a class="social-icon" href="http://www.youtube.com/byuionline"><img src="../../img/social-icons/youtube.png" width="27" height="27"></a> </li>
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li> <a href="#">About Us</a> </li>
-        <li> <a href="pages/pathway-faq.html"><img class="faq-bubble" src="../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li> <a href="../pathway-faq.html"><img class="faq-bubble" src="../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
       </ul>
       <img class="byui-logo" src="../../img/byui_logo.png" width="78" height="45"> </div>
