--- a/pages/local_leaders/request-a-site.html
+++ b/pages/local_leaders/request-a-site.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>Pathway - Request a Site</title>
+	<title>Pathway - Request A Site</title>
 
 	<!-- Favicon Section -->
 	<link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-touch-icon-57x57.png" />
@@ -51,7 +51,7 @@
    						&nbsp;
    					</li>
    					<li class="header-column pull-left">
-   						<a class="navbar-brand img-responsive hidden-xs" href="../../index.htm"><img id="pathway-logo" width="280px" src="../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img src="../../img/mobile-logo.png" width="159" height="48" id="pathway-mobile-logo"></a>
+   						<a class="navbar-brand img-responsive hidden-xs" href="../../index.htm"><img id="pathway-logo" width="280px" src="../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img src="../../img/mobile-logo.png" id="pathway-mobile-logo"></a>
    					</li>
    					<li class="header-column pull-right">
    						<a class="header_contact hidden-xs pull-left" href="#contactUs">Contact Us <img src="../../img/speechbubble.png" width="13" height="11" alt="speech"></a>
@@ -164,7 +164,8 @@
    					<span style="font-style:italic;">justesenb@byui.edu.</span>
                </div>
    				</div>
-
+          <br>
+          <br>
    			</div>
 
    			<!-- Sidebar Start -->
@@ -198,7 +199,7 @@
         <a class="social-icon" href="http://www.youtube.com/byuionline"><img src="../../img/social-icons/youtube.png" width="27" height="27"></a> </li>
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li> <a href="#">About Us</a> </li>
-        <li> <a href="pages/pathway-faq.html"><img class="faq-bubble" src="../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li> <a href="../pathway-faq.html"><img class="faq-bubble" src="../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
       </ul>
       <img class="byui-logo" src="../../img/byui_logo.png" width="78" height="45"> </div>
