--- a/pages/speaking_partners/what-is-speaking-partners.html
+++ b/pages/speaking_partners/what-is-speaking-partners.html
@@ -51,7 +51,7 @@
               &nbsp;
             </li>
             <li class="header-column pull-left">
-              <a class="navbar-brand img-responsive hidden-xs" href="../../index.htm"><img id="pathway-logo" width="280px" src="../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img src="../../img/mobile-logo.png" width="159" height="48" id="pathway-mobile-logo"></a>
+              <a class="navbar-brand img-responsive hidden-xs" href="../../index.htm"><img id="pathway-logo" width="280px" src="../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img src="../../img/mobile-logo.png" id="pathway-mobile-logo"></a>
             </li>
             <li class="header-column pull-right">
               <a class="header_contact hidden-xs pull-left" href="#contactUs">Contact Us <img src="../../img/speechbubble.png" width="13" height="11" alt="speech"></a>
@@ -177,7 +177,7 @@
           </li>
           <li> <a href="contact-us.html"> <span class="caret"></span> Contact Us</a>
           </li>
-          <li> <a href="FAQs.html"> <span class="caret"></span> FAQ</a>
+          <li> <a href="../pathway-faq.html#sp-section"> <span class="caret"></span> FAQ</a>
           </li>
         </ul>
       </div>
