--- a/pages/what_is_pathway/l_version/admission.html
+++ b/pages/what_is_pathway/l_version/admission.html
@@ -198,6 +198,8 @@
 <a href="cost.html" class="next turquoise">Cost >></a>	
 
 </div>
+
+
 <!-- Sidebar Start -->
 <div class="col-xs-6 col-sm-4 pull-right" id="sidebar" role="navigation">
 	<div class="pf-sidebar" id="sideNav" role="complementary">
@@ -244,7 +246,7 @@
 									Cost</a>
 									<ul class="nav">
 										<li>
-											<a href="cost_calc_tuition.html">Calculate Tutition</a>
+											<a href="cost_calc_tuition.html">Calculate Tuition</a>
 										</li>
 										<li>
 											<a href="cost.html#FinancialAid">Financial Aid</a>
@@ -268,7 +270,7 @@
 										</ul>
 									</li>
 								</ul>
-								<h3><a href="../faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
+								<h3><a href="../../pathway-faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
 							</div>
 						</div>
 						<!-- End Sidebar -->
