--- a/pages/what_is_pathway/l_version/degree.html
+++ b/pages/what_is_pathway/l_version/degree.html
@@ -160,7 +160,7 @@
 			<a href="cost_calc_tuition.html" class="previous turquoise"><< Calculate Tuition</a>
 
 		</div>
-		
+
 		<!-- Sidebar Start -->
 <div class="col-xs-6 col-sm-4 pull-right" id="sidebar" role="navigation">
 			<div class="pf-sidebar" id="sideNav" role="complementary">
@@ -207,7 +207,7 @@
 						Cost</a>
                         <ul class="nav">
 							<li>
-								<a href="cost_calc_tuition.html">Calculate Tutition</a>
+								<a href="cost_calc_tuition.html">Calculate Tuition</a>
 							</li>
 							<li>
 								<a href="cost.html#FinancialAid">Financial Aid</a>
@@ -231,7 +231,7 @@
 						</ul>
 					</li>
 				</ul>
-                <h3><a href="../faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
+                <h3><a href="../../pathway-faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
 			</div>
 		</div>
 <!-- End Sidebar -->
