--- a/pages/what_is_pathway/l_version/service_missionaries.html
+++ b/pages/what_is_pathway/l_version/service_missionaries.html
@@ -200,7 +200,7 @@
 						Cost</a>
                         <ul class="nav">
 							<li>
-								<a href="cost_calc_tuition.html">Calculate Tutition</a>
+								<a href="cost_calc_tuition.html">Calculate Tuition</a>
 							</li>
 							<li>
 								<a href="cost.html#FinancialAid">Financial Aid</a>
@@ -224,7 +224,7 @@
 						</ul>
 					</li>
 				</ul>
-                <h3><a href="../faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
+                <h3><a href="../../pathway-faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
 			</div>
 		</div>
 <!-- End Sidebar -->
