--- a/pages/what_is_pathway/l_version/speaking_partners.html
+++ b/pages/what_is_pathway/l_version/speaking_partners.html
@@ -51,7 +51,7 @@
 					&nbsp;
 				</li>
 				<li class="header-column pull-left">
-					<a class="navbar-brand img-responsive hidden-xs" href="../../../index.htm"><img id="pathway-logo" width="280px" src="../../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img src="../../../img/mobile-logo.png" width="159" height="48" id="pathway-mobile-logo"></a>
+					<a class="navbar-brand img-responsive hidden-xs" href="../../../index.htm"><img id="pathway-logo" width="280px" src="../../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img src="../../../img/mobile-logo.png" id="pathway-mobile-logo"></a>
 				</li>
 				<li class="header-column pull-right">
 					<a class="header_contact hidden-xs pull-left" href="#contactUs">Contact Us <img src="../../../img/speechbubble.png" width="13" height="11" alt="speech"></a>
@@ -192,7 +192,7 @@
 						Cost</a>
                         <ul class="nav">
 							<li>
-								<a href="cost_calc_tuition.html">Calculate Tutition</a>
+								<a href="cost_calc_tuition.html">Calculate Tuition</a>
 							</li>
 							<li>
 								<a href="cost.html#FinancialAid">Financial Aid</a>
@@ -216,7 +216,7 @@
 						</ul>
 					</li>
 				</ul>
-                <h3><a href="../faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
+                <h3><a href="../../pathway-faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
 			</div>
 		</div>
 <!-- End Sidebar -->
