--- a/pages/what_is_pathway/s_version/service_missionaries.html
+++ b/pages/what_is_pathway/s_version/service_missionaries.html
@@ -123,12 +123,12 @@
 			<div class="hero pf-page-header">
 				<img src="../../../img/wip/icons/standard.png" alt="standardLogo"> 
 				<h1 id="Standard" class="page-title">Standard Version</h1>
-				<p class="page-summary">For students who are fully proficient in English.</p>
+				<p class="page-summary">For students who are proficient in English.</p>
 			</div>
 			<div class="pf-section" "main-content">
 				<div class="pf-page-header">
 					<img src="../../../img/wip/icons/missionaries.png" width="46" height="55" alt="missionaries">
-					<h2 id="ServiceMissionaries" class="subheading">Services Missionaries</h2>
+					<h2 id="ServiceMissionaries" class="subheading">Service Missionaries</h2>
 				</div>
 
 				<p>Service missionaries play a central role in Pathway. Each
@@ -148,13 +148,12 @@
 				<div class="click-here red">To contact the missionaries in your area, visit &nbsp;our <a href="#">Locations</a> page.		
 				</div>
 
-				
-			</div>	
-            <a href="HPW.html" class="previous red"><< How Pathway Works</a>
+				 <a href="HPW.html" class="previous red"><< How Pathway Works</a>
 
-				<a href="admission.html" class="next red">Admission Requirements >></a>		
-		</div>
-		
+				 <a href="admission.html" class="next red">Admission Requirements >></a>	
+			</div>	
+           			</div>
+			
 		<!-- Sidebar Start -->
 <div class="col-xs-6 col-sm-4 pull-right" id="sidebar" role="navigation">
 			<div class="pf-sidebar" id="sideNav" role="complementary">
@@ -198,7 +197,7 @@
 						Cost</a>
                         <ul class="nav">
 							<li>
-								<a href="cost_calc_tuition.html">Calculate Tutition</a>
+								<a href="cost_calc_tuition.html">Calculate Tuition</a>
 							</li>
 							<li>
 								<a href="cost.html#FinancialAid">Financial Aid</a>
