--- a/pages/testimonials/testimonials.html
+++ b/pages/testimonials/testimonials.html
@@ -130,7 +130,7 @@
     </div>
     </div>
    </div>
-<div class="col-xs-12 visible-xs">
+<div class="col-xs-12 visible-xs testimonial-quote-block">
     	<img src="../../img/testimonials/mobile-speech.png" width="100%">
     </div>
    <div class="container testimonial-quote-block hidden-xs">
@@ -139,7 +139,7 @@
          <img class="quote-bubble img-responsive" src="../../img/testimonials/bubble_1.png" alt="quote bubble" width="100%">
       <p class="quote">Pathway…has really brought light to my life. It’s helped me out with so much stuff I never thought I’d achieve. I never had plans on going to college. Ever. Not even for a second in my life. And now I feel like I can achieve that because of Pathway. If it wasn’t for this program, I don’t think I could do it.</p>
             <div class="quote-credit one">
-      <p style="font-weight:bold">Joe Hendrick,<br><span style="font-weight:normal;font-style:italic;">Riverside, California, Pathway Student</span></p>
+      <p style="font-weight:bold">Joe Hedrick,<br><span style="font-weight:normal;font-style:italic;">Riverside, California, Pathway Student</span></p>
       </div>
     </div>
     <div class="col-sm-4">
@@ -224,7 +224,7 @@
         <a class="social-icon" href="http://www.youtube.com/byuionline"><img src="../../img/social-icons/youtube.png" width="27" height="27"></a> </li>
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li> <a href="#">About Us</a> </li>
-        <li> <a href="pages/pathway-faq.html"><img class="faq-bubble" src="../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li> <a href="../pathway-faq.html"><img class="faq-bubble" src="../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
       </ul>
       <img class="byui-logo" src="../../img/byui_logo.png" width="78" height="45"> </div>
