--- a/pages/what_is_pathway/l_version/HPW.html
+++ b/pages/what_is_pathway/l_version/HPW.html
@@ -124,15 +124,14 @@
 			<div class="hero pf-page-header">
 				<img src="../../../img/wip/icons/lversion.png" alt="L-VersionLogo">
 				<h1 id="Standard" class="page-title">L Version</h1>
-				<p class="page-summary">For students who are <span style="font-style:normal; font-weight:675;">not</span> fully proficient in English.</p> 
-			</div>
+				<p class="page-summary">For students who have low to intermediate English proficiency.</p></div>
 			<div class="pf-section">
 				<div class="pf-page-header">
 					<img src="../../../img/wip/icons/gear.png" width="45" height="46" alt="gear">
 					<h2 id="HowPathwayWorks" class="subheading">How Pathway Works</h2>
 				</div>
 				<h3 id="OnlineAcademicCourses" class="p-heading turquoise">Online Academic Courses</h3>
-				<p>During each of the three semesters, students take one online academic class from BYU-Idaho as well as one religion class. The three academic classes are designed to give students the confidence and skills needed to succeed in college and include: Pathway English and Life Skills (GS 120L), English Language and Personal Finance (Math 100L), English
+				<p>During each of the three semesters, students take one online academic class from BYU-Idaho as well as one religion class. The three academic classes are designed to give students the confidence and skills needed to succeed in college and include Pathway English and Life Skills (GS 120L), English Language and Personal Finance (Math 100L), and English
 				Language and Basic Writing (ENG 106L).</p>
 				<!-- <ul>
 					<li>
@@ -255,7 +254,7 @@
         <a class="social-icon" href="http://www.youtube.com/byuionline"><img src="../../../img/social-icons/youtube.png" width="27" height="27"></a> </li>
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li> <a href="#">About Us</a> </li>
-        <li> <a href="pages/pathway-faq.html"><img class="faq-bubble" src="../../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li> <a href="../../pathway-faq.html"><img class="faq-bubble" src="../../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
       </ul>
       <img class="byui-logo" src="../../../img/byui_logo.png" width="78" height="45"> </div>
