--- a/pages/what_is_pathway/l_version/cost.html
+++ b/pages/what_is_pathway/l_version/cost.html
@@ -124,9 +124,7 @@
 				<img src="../../../img/wip/icons/lversion.png" alt="standardLogo">
 				<h1 id="Standard" class="page-title">L Version</h1>
 				
-					<p class="page-summary">For students who are <span style="font-style:normal; font-weight:675;">not</span> fully proficient in English.</p> 
-			
-			</div>
+					<p class="page-summary">For students who have low to intermediate English proficiency.</p></div>
 			<div class="pf-section">
 				<div class="pf-page-header">
 					<img src="../../../img/wip/icons/piggy.png" alt="piggy">
@@ -244,7 +242,7 @@
         <a class="social-icon" href="http://www.youtube.com/byuionline"><img src="../../../img/social-icons/youtube.png" width="27" height="27"></a> </li>
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li> <a href="#">About Us</a> </li>
-        <li> <a href="pages/pathway-faq.html"><img class="faq-bubble" src="../../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li> <a href="../../pathway-faq.html"><img class="faq-bubble" src="../../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
       </ul>
       <img class="byui-logo" src="../../../img/byui_logo.png" width="78" height="45"> </div>
