--- a/pages/what_is_pathway/s_version/HPW.html
+++ b/pages/what_is_pathway/s_version/HPW.html
@@ -165,7 +165,7 @@
 						Teachings of the Living Prophets – FDREL 333
 					</li>
 				</ul>
-				<p>All Pathway students in the standard version take the same academic and religion courses, but the schedule and method vary by <a href="">age group</a>.</p>
+				<p>All Pathway students in the standard version take the same academic and religion courses, but the schedule and method vary by <a href="#AgeGroups">age group</a>.</p>
 
 				<img class="center-block img-responsive img-space" src="../../../img/hpw/167447143.jpg" alt="students working on a project together" width="100%">
 
@@ -281,7 +281,7 @@
         <a class="social-icon" href="http://www.youtube.com/byuionline"><img src="../../../img/social-icons/youtube.png" width="27" height="27"></a> </li>
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li> <a href="#">About Us</a> </li>
-        <li> <a href="pages/pathway-faq.html"><img class="faq-bubble" src="../../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li> <a href="../../pathway-faq.html"><img class="faq-bubble" src="../../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
       </ul>
       <img class="byui-logo" src="../../../img/byui_logo.png" width="78" height="45"> </div>
