--- a/pages/what_is_pathway/s_version/admission.html
+++ b/pages/what_is_pathway/s_version/admission.html
@@ -144,7 +144,7 @@
 						Attend the weekly gathering during Pathway (one full year)
 					</li>
 					<li>
-						Strive to live by the <a href="#">BYU-Idaho Honor Code</a>
+						Strive to live by the <a href="http://www.byui.edu/student-honor-office/ces-honor-code" target="_blank">BYU-Idaho Honor Code</a>
 					</li>
 					<li>
 						Be proficient in listening to, speaking, reading, and writing English (proficiency assessment may be required)
@@ -163,9 +163,9 @@
 				
 				<a href=""><img id="location-icon" src="../../../img/admission/location.png" alt="location"></a>
 
-				<div class="click-here red"><a href="">Click here to search for a Pathway site near you.</a></div>
+				<div class="click-here red"><a href="#joinpathway">Click here to search for a Pathway site near you.</a></div>
 				
-				<img class="img-space" id="adm-img" src="../../../img/admission/175138299 copy.jpg" alt="location map" width="100%"></a>
+				<img class="img-space" id="adm-img" src="../../../img/admission/worldmap.png" alt="location map" width="100%"></a>
 
 			<div class="main-content">
 				<h3 class="p-heading red">Simple Admission Process</h3>
@@ -286,7 +286,7 @@
         <a class="social-icon" href="http://www.youtube.com/byuionline"><img src="../../../img/social-icons/youtube.png" width="27" height="27"></a> </li>
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li> <a href="#">About Us</a> </li>
-        <li> <a href="pages/pathway-faq.html"><img class="faq-bubble" src="../../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li> <a href="../../pathway-faq.html"><img class="faq-bubble" src="../../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
       </ul>
       <img class="byui-logo" src="../../../img/byui_logo.png" width="78" height="45"> </div>
