--- a/pages/what_is_pathway/s_version/degree.html
+++ b/pages/what_is_pathway/s_version/degree.html
@@ -139,19 +139,19 @@
 				<h3 id="OnlineDegree" class="p-heading red">Online Degree Program</h3>
 				<p>At the end of Pathway, students may advance into BYU-Idaho's Online Degree Program. To be eligible for the Online Degree Program, students must earn a minimum "B" average (3.0 GPA) during Pathway and obtain an ecclesiastical endorsement from their bishop.</p>
 
-				<img src="../../../img/degree-options/143071485.jpg" alt="Student-working-online" class="img-responsive img-space" width="100%">
+				<img src="../../../img/degree-options/onlinedegreeprogram.png" alt="Student-working-online" class="img-responsive img-space" width="100%">
 
 				<p>Students will continue to take courses online at the same low Pathway tuition rate and work toward some or all of the following options:</p>
 				<ul>
-				 	<li>Professional Certificates (14-15 credits)</li>
+				 	<li>Professional Certificates (30 credits)</li>
 				 	<li>Associate Degree (60 credits)</li>
 				 	<li>Bachelor’s Degree (120 credits)</li>
 				 </ul>
-				 <a href="http://www.byui.edu/online/online-degrees-and-certificates" style="color:#dc4831; text-decoration:underline; font-size:130%;">Learn more about the BYU-Idaho Online Degree Program</a>.
+				 <a href="http://www.byui.edu/online/online-degrees-and-certificates" target="_blank" style="color:#dc4831; text-decoration:underline; font-size:130%;">Learn more about the BYU-Idaho Online Degree Program</a>.
 				 <h3 id="Campus" class="p-heading red">Campus</h3>
-				 <p>Students who complete Pathway and wish to attend BYU-Idaho on campus in Rexburg must apply at  <a style="font-style: italic; text-decoration: underline;" href="besmart.com">besmart.com</a> and pay the regular campus tuition. If the student completed Pathway with at least a 3.0 GPA, the high school transcript and standardized test score (ACT/SAT) requirement will be waived as part of the application process.</p>
+				 <p>Students who complete Pathway and wish to attend BYU-Idaho on campus in Rexburg must apply at  <a style="font-style: italic; text-decoration: underline;" href="http://besmart.com/" target="_blank">besmart.com</a> and pay the regular campus tuition. If the student completed Pathway with at least a 3.0 GPA, the high school transcript and standardized test score (ACT/SAT) requirement will be waived as part of the application process.</p>
 
-				 <img src="../../../img/degree-options/131001_SporiBldg_17.jpg" alt="Student-working-online" class="img-responsive img-space" width="100%" />
+				 <img src="../../../img/degree-options/sporibuilding.png" alt="Student-walking-to-class" class="img-responsive img-space" width="100%" />
 
 				 <h3 id="OtherUniversities" class="p-heading red">Other Universities</h3>
 				 <p>Completion of Pathway will give students the confidence and skills needed to succeed in any college. Students are encouraged to attend local colleges and universities at the completion of Pathway if their educational and career goals are better met there. Admission requirements, tuition rates, and transfer credit requirements vary by institution.</p>
@@ -246,7 +246,7 @@
         <a class="social-icon" href="http://www.youtube.com/byuionline"><img src="../../../img/social-icons/youtube.png" width="27" height="27"></a> </li>
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li> <a href="#">About Us</a> </li>
-        <li> <a href="pages/pathway-faq.html"><img class="faq-bubble" src="../../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li> <a href="../../pathway-faq.html"><img class="faq-bubble" src="../../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
       </ul>
       <img class="byui-logo" src="../../../img/byui_logo.png" width="78" height="45"> </div>
