--- a/index.htm
+++ b/index.htm
@@ -163,17 +163,17 @@
 	<div class="row">
 		<div class="feature col-sm-4 col-xs-6">
 			<!--<h2>Heading</h2>--> 
-			<img src="img/feature1.png" class="img-responsive">
+			<img src="img/homepage/localgatherings.png" class="img-responsive">
 			<div class="featureMaster feature1 first-columns"><span>Online Courses with local gatherings</span></div>
 		</div>
 		<div class="feature col-sm-4 col-xs-6">
 			<!--<h2>Heading</h2>--> 
-			<img src="img/feature2.png" class="img-responsive">
+			<img src="img/homepage/applyhere.png" class="img-responsive">
 			<div class="featureMaster feature2 second-columns"><span>Find a Location and&nbsp;Apply</span></div>
 		</div>
 		<div class="feature col-sm-4 col-xs-6">
 			<!--<h2>Heading</h2>--> 
-			<img src="img/feature3.png" class="img-responsive">
+			<img src="img/homepage/pathwayadvising.png" class="img-responsive">
 			<div class="featureMaster feature3 third-columns"><span>friendly support team</span></div>
 		</div>
         <div class="feature visible-xs col-xs-6">
