--- a/pages/what_is_pathway/l_version/service_missionaries.html
+++ b/pages/what_is_pathway/l_version/service_missionaries.html
@@ -123,12 +123,11 @@
 			<div class="hero pf-page-header">
 				<img src="../../../img/wip/icons/lversion.png" alt="L-VersionLogo"> 
 				<h1 id="Standard" class="page-title">L Version</h1>
-				<p class="page-summary">For students who are <span style="font-style:normal; font-weight:675;">not</span> fully proficient in English.</p> 
-			</div>
+				<p class="page-summary">For students who have low to intermediate English proficiency.</p></div>
 			<div class="pf-section" "main-content">
 				<div class="pf-page-header">
 					<img src="../../../img/wip/icons/missionaries.png" width="46" height="55" alt="missionaries">
-					<h2 id="ServiceMissionaries" class="subheading">Services Missionaries</h2>
+					<h2 id="ServiceMissionaries" class="subheading">Service Missionaries</h2>
 				</div>
 
 				<p>Service missionaries play a central role in Pathway. Each
@@ -145,7 +144,7 @@
 
 				<img class="img-responsive" id="location-icon"src="../../../img/service-missionaries/location_blue.png" alt="missionaries">
 
-				<div class="click-here turquoise">To contact the missionaries in your area, visit our <a href="#">Locations</a> page.			</div>
+				<div class="click-here turquoise">To contact the missionaries in your area, visit our <a href="#joinpathway">Locations</a> page.			</div>
 			</div>
 
 			<a href="speaking_partners.html" class="previous turquoise"><< Speaking Partners</a>
@@ -241,7 +240,7 @@
         <a class="social-icon" href="http://www.youtube.com/byuionline"><img src="../../../img/social-icons/youtube.png" width="27" height="27"></a> </li>
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li> <a href="#">About Us</a> </li>
-        <li> <a href="pages/pathway-faq.html"><img class="faq-bubble" src="../../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li> <a href="../../pathway-faq.html"><img class="faq-bubble" src="../../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
       </ul>
       <img class="byui-logo" src="../../../img/byui_logo.png" width="78" height="45"> </div>
