--- a/pages/what_is_pathway/s_version/service_missionaries.html
+++ b/pages/what_is_pathway/s_version/service_missionaries.html
@@ -145,7 +145,7 @@
 
 				<img class="img-responsive" id="location-icon"src="../../../img/service-missionaries/location.png" alt="missionaries">
 
-				<div class="click-here red">To contact the missionaries in your area, visit &nbsp;our <a href="#">Locations</a> page.		
+				<div class="click-here red">To contact the missionaries in your area, visit &nbsp;our <a href="#joinpathway">Locations</a> page.		
 				</div>
 
 				 <a href="HPW.html" class="previous red"><< How Pathway Works</a>
@@ -239,7 +239,7 @@
         <a class="social-icon" href="http://www.youtube.com/byuionline"><img src="../../../img/social-icons/youtube.png" width="27" height="27"></a> </li>
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li> <a href="#">About Us</a> </li>
-        <li> <a href="pages/pathway-faq.html"><img class="faq-bubble" src="../../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li> <a href="../../pathway-faq.html"><img class="faq-bubble" src="../../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
       </ul>
       <img class="byui-logo" src="../../../img/byui_logo.png" width="78" height="45"> </div>
