--- a/pages/what_is_pathway/what_is_pathway.html
+++ b/pages/what_is_pathway/what_is_pathway.html
@@ -156,7 +156,7 @@
 					</li>
 					<li>
 						<a class="no-highlight" href="l_version/HPW.html"><img src="../../img/wip/icons/button_lversion.png"></a>
-						<p>For students who a<strong> have low to intermediate English proficiency</strong>, the L version includes academic courses that incorporate English-language instruction as a main component of the coursework. Students meet weekly with a native English speaker throughout the program to improve their English skills. All parts of the program are facilitated entirely in English.</p>
+						<p>For students who <strong> have low to intermediate English proficiency</strong>, the L version includes academic courses that incorporate English-language instruction as a main component of the coursework. Students meet weekly with a native English speaker throughout the program to improve their English skills. All parts of the program are facilitated entirely in English.</p>
 					</li>
 				</ul>
 			</div>
@@ -174,7 +174,7 @@
         <a class="social-icon" href="http://www.youtube.com/byuionline"><img src="../../img/social-icons/youtube.png" width="27" height="27"></a> </li>
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li> <a href="#">About Us</a> </li>
-        <li> <a href="pages/pathway-faq.html"><img class="faq-bubble" src="../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li> <a href="../pathway-faq.html"><img class="faq-bubble" src="../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
       </ul>
       <img class="byui-logo" src="../../img/byui_logo.png" width="78" height="45"> </div>
