--- a/pages/local_leaders/roles-responsibilities.html
+++ b/pages/local_leaders/roles-responsibilities.html
@@ -136,7 +136,7 @@
    					<ul>
    						<h4 class="p-heading2 blue">AREA SEVENTIES</h4>
    						<li>Garner strong stake leadership support for Pathway</li>
-   						<li>Establish recruitment goals, and distribute responsibility</li>
+   						<li>Establish recruitment goals and distribute responsibility</li>
    						<li>Coordinate multi-stake cooperation and execution</li>
    					</ul>
    					<ul>
@@ -158,7 +158,7 @@
    					</ul>
    				</div>
    				<div class="pf-section no-icon">
-   					<h3 class="p-heading blue">Role of Pathway Missionaries</h3>
+   					<a id="roleofpathwaymissionaries"><h3 class="p-heading blue">Role of Pathway Missionaries</h3></a>
    					<p>BYU-Idaho relies heavily on Church service missionaries to assist with the on-site management of Pathway. While priesthood leaders and institute directors support the program, the missionaries do the bulk of the work to ensure Pathway is successful and that students have a meaningful experience. Missionaries are primarily asked to:</p>
    					<ul>
    						<li>Promote Pathway by personally engaging priesthood and auxiliary leaders in each stake and ward</li>
@@ -178,12 +178,11 @@
           <li> <a href="getting-started.html"> <span class="caret"></span> Getting Started</a> </li>
           <li class="active"> <a href="roles-responsibilities.html"> <span class="caret"></span> Roles &amp; Responsibilities</a>
           </li>
-          <li> <a href="implementation.html"> <span class="caret"></span> Program Implementation</a>
+          <li> <a href="request-a-site.html"> <span class="caret"></span> Request a Site</a>
           </li>
           <li> <a href="../testimonials/testimonials.html"> <span class="caret"></span> The Pathway Experience</a>
           </li>
-          <li> <a href="request-a-site.html"> <span class="caret"></span> Request a Site</a>
-          </li>
+          
         </ul>
       </div>
     </div>
