--- a/pages/speaking_partners/what-is-speaking-partners.html
+++ b/pages/speaking_partners/what-is-speaking-partners.html
@@ -123,17 +123,13 @@
       </div>
       <div class="pf-section no-icon">
 
-        <p>The Speaking Partner Program facilitates conversations between
-        native or near-native English speakers and English-learning
-        Pathway students. Through the Speaking Partner Program,
-        Pathway students enhance their English skills, increase in
-        confidence, and have better job opportunities as they graduate.</p>
+        <p>The Speaking Partner Program is an integral part of the Pathway experience. Students in Pathway’s L version benefit by practicing and improving their English speaking abilities, while those in the Standard version benefit by being speaking partners and therefore assisting non-native English speaking Pathway students. Through the Speaking Partner Program, Pathway students enhance their English skills, increase in confidence, and have better job opportunities as they graduate.</p>
 
       </div>  
 
         <div id="video-info-block">
         <img alt="play-button" class="play-button img-responsive" src="../../img/speaking-partners-main/speakingpartner_playbutton.png">
-        <p class="note green">Watch the video below to learn more about the speaking partner program.</p>
+        <p class="note green">Watch the video below to learn more about the Speaking Partner Program.</p>
         </div>
 
         <!-- <img class="center-block img-responsive" src="../../img/WIP/section_imgs/mini_infographic.png" width="426" height="494"> -->
@@ -143,7 +139,7 @@
       </div>
 
         <div class="caption-block green">
-        <p>To watch more videos or learn more about about Pathway, visit our media page, or click on one of the social media links at the bottom of the page.</p>
+        <p>To watch more videos or learn more about about Pathway, visit our Media Page, or click on one of the social media links at the bottom of the page.</p>
         </div>
 
         <div class="main-content">
@@ -152,7 +148,7 @@
             <li>Speak native or near-native English</li>
             <li>Be an LDS member or BYU-Idaho student</li>
             <li>Be 18 years of age or older</li>
-            <li>Have access to internet and video chat setup</li>
+            <li>Have access to Internet and video chat setup</li>
             <li>Be available 30 minutes a week for 12 weeks</li>
           </ul>
         </div>
