--- a/pages/what_is_pathway/l_version/HPW.html
+++ b/pages/what_is_pathway/l_version/HPW.html
@@ -78,7 +78,7 @@
 				<nav id="siteNavigation" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li class="nav-1"><a href="../../testimonials/testimonials.html">Testimonials</a></li>
-						<li class="nav-2"><a href="../../what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+						<li class="nav-2 nav_active"><a href="../../what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
 						<li class="nav-3"><a href="#join">Join Pathway</a></li>
 						<li class="nav-4"><a href="../../speaking_partners/what-is-speaking-partners.html">SPEAKING PARTNERS</a></li>
 						<li class="nav-5"><a href="../../local_leaders/using-pathway.html">Local Leaders</a></li>
@@ -124,8 +124,7 @@
 					<h2 id="HowPathwayWorks" class="subheading">How Pathway Works</h2>
 				</div>
 				<h3 id="OnlineAcademicCourses" class="p-heading turquoise">Online Academic Courses</h3>
-				<p>During each of the three semesters, students take one online academic class from BYU-Idaho as well as one religion class. The three academic classes are designed to give students the confidence and skills needed to succeed in college and include Pathway English and Life Skills (GS 120L), English Language and Personal Finance (Math 100L), and English
-				Language and Basic Writing (ENG 106L).</p>
+				<p>During each of the three semesters, students take just one online academic class from BYU-Idaho. The three academic classes incorporate English-language instruction as a main component of the coursework and are designed to give students the confidence and skills needed to succeed in college and life. The L version academic courses include Pathway English and Life Skills (GS 120L), English Language and Personal Finance (Math 100L), and English Language and Basic Writing (ENG 106L).</p>
 				<!-- <ul>
 					<li>
 						Pathway Life Skills (GS 120)
@@ -139,7 +138,7 @@
 				</ul>
 				<img class="center-block img-responsive" src="../../../img/WIP/section_imgs/books_calculator_paper.png"> -->
 
-				<img class="center-block img-responsive img-space" src="../../../img/hpw/pathway_course_sequence.png" alt="pathway course sequence" width="100%">
+				<img class="center-block img-responsive img-space" src="../../../img/hpw/pathway_course_sequence_l.png" alt="pathway course sequence" width="100%">
 
 				<h3 id="ReligionClasses" class="p-heading turquoise">Religion Courses</h3>
 				<p>Because of the advantages for English-learning Church members, L version students are strongly encouraged to
