--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -103,7 +103,7 @@
             <p> Pathway is a low-cost educational opportunity that combines online
               courses with local gatherings. Participants gain valuable skills that
               will serve them throughout their lives and in pursuing a college
-              degree. As a program of the Church of Jesus Christ of Latter-day
+              degree. As a program of The Church of Jesus Christ of Latter-day
               Saints, students will also receive the spiritual benefits of a
               gospel-incorporated education. Brigham Young University-Idaho has
               greatly helped and influenced the development of Pathway. </p>
@@ -131,14 +131,14 @@
             the blessings of education ... from this campus out into
             the lives of men and women everywhere." </p>
           <div style="float:right">
-            <p><span class="credit-red">PRESIDENT HENRY B. EYRING,</span> <br>
+            <p><span class="credit-red">PRESIDENT HENRY B. EYRING</span> <br>
               <span class="credit-red2">Inaugural Response, December 1971</span></p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-4"> <img style="float:left" src="../img/about-us/eyring.png" alt="President Henry B. Eyring"> </div>
       </div>
         <div class="content-block underline">
-          <p>Nearly 30 years later, in his own inaugural address, David A Bednar stated:</p>
+          <p>Nearly 30 years later, in his own inaugural address, David A. Bednar stated:</p>
         </div>
         <div class="content-block underline">
           <div class="col-xs-12 col-sm-8">
@@ -152,7 +152,7 @@
               Rhode Island and Rome while effectively
               serving our students on campus in Rexburg." </p>
             <div style="float:right">
-              <p><span class="credit-red">PRESIDENT DAVID A. BEDNAR,</span> <br>
+              <p><span class="credit-red">PRESIDENT DAVID A. BEDNAR</span> <br>
                 <span class="credit-red2">Inaugural Response, February 1998</span></p>
             </div>
           </div>
@@ -173,15 +173,15 @@
               space will allow us to leverage the capacity of the
               university and reach many more young people." </p>
             <div style="float:right">
-              <p><span class="credit-red">PRESIDENT KIM B. CLARK,</span> <br>
+              <p><span class="credit-red">PRESIDENT KIM B. CLARK</span> <br>
                 <span class="credit-red2">Inaugural Response, October 2005</span></p>
             </div>
           </div>
           <div class="col-xs-12 col-sm-4"> <img src="../img/about-us/clark.png" alt="President Kim B. Clark"> </div>
         </div>
         <div class="content-block">
-          <div class="col-xs-12">
-            <p> In January of 2009, BYU-Idaho introduced Pathway, a program
+          <div class="col-xs-12 col-sm-8">
+              <p>In January of 2009, BYU-Idaho introduced Pathway, a program
               designed to help students prepare for earning a college degree
               through online courses and weekly gatherings with others. What
               started as a humble pilot program of three sites in the United States
@@ -189,15 +189,17 @@
               educational system of over 150 worldwide sites, serving thousands
               of students each year. As President Eyring suggested, the university
               has truly found “direct ways to move the blessings of education …
-              from this campus out into the lives of men and women everywhere.”
-              Since its creation, Pathway has blessed lives more than just
+              from this campus out into the lives of men and women everywhere.”</p>
+
+              <p>Since its creation, Pathway has blessed lives more than just
               academically. Priesthood leaders have utilized Pathway as a tool to
               help bring Church members back into the open arms of the gospel.
               Many students express that their testimonies have been nurtured
               and strengthened through course work and interaction with others.
               Hundreds of couples and individuals have also served the Church as
-              Pathway missionaries.
-              As each semester passes, we continue to see the blessings of
+              Pathway missionaries.</p>
+
+              <p>As each semester passes, we continue to see the blessings of
               Pathway touch the lives of Church members across the world. In
               2011, Pathway was introduced on an international level, providing
               the program to students in Puebla, Mexico, and Christiansborg,
@@ -206,9 +208,22 @@
               climate, and language but they share the bonds of the gospel and a desire for higher education. Pathway has also extended to over 100
               domestic sites within the United States and Canada. With these
               expanding opportunities, over 2,000 students have completed
-              Pathway and started the BYU-Idaho Online Degree Program. <br>
+              Pathway and started the BYU-Idaho Online Degree Program.</p> <br>
               <br>
-            </p>
+            
+              <img class="img-responsive" src="../img/about-us/pathwaysitechart.png" alt="pathway site chart">
+              <br>
+              <br>
+              <img class="img-responsive" src="../img/about-us/pathwaystudentchart.png" alt="pathway student chart">
+              <br>
+              <p>Pathway will continue to open doors of education and hope
+                throughout the world. As the program grows, we will always seek the
+                most efficient ways to serve all who are involved. We have truly seen
+                the hand of the Lord throughout the development and progress of
+                Pathway. He is in charge and He directs this work. We are excited to
+                see what the future holds for Pathway, and we are confident that,
+                with the Lord’s help, thousands of lives will continue to be blessed.</p>
+              <br>
           </div>
         </div>
     </div>
