--- a/pages/local_leaders/getting-started.html
+++ b/pages/local_leaders/getting-started.html
@@ -130,7 +130,7 @@
    					<div style="width:65%; float:left; margin:203px 0 60px 15px;">
    						<p class="click-here blue">
               <img  style="float:left; margin-right:20px;" src="../../img/local-leaders/download_blue.png"/>
-              Click here to download the Pathway <br />Priesthood Leadership Handbook.</p>
+              <a href="../../pdfs/local_leaders/Pathway_Handbook_for_Church_Leaders.pdf" target="_blank">Click here to download the Pathway <br />Priesthood Leadership Handbook.</a></p>
    					</div>
    				</div> 
    				
@@ -158,17 +158,17 @@
    							<li>Take a similar approach to #1 with stake councils and bishops training meetings. In turn, bishops can proceed to introduce Pathway to their ward councils.</li>
    					</ol>
           </div>
-   						<p class="main-content">For those desiring to provide more detailed information regarding Pathway, the Pathway Priesthood <a style="color:#dc4831;;" href="#">Leadership Guide</a> can be downloaded and distributed.</p>
+   						<p class="main-content">For those desiring to provide more detailed information regarding Pathway, the <a href="../../pdfs/local_leaders/Pathway_Handbook_for_Church_Leaders.pdf" target="_blank"> Pathway Priesthood Leadership Guide</a> can be downloaded and distributed.</p>
    					</div>
    					<div class="pf-section no-icon">
    						<h3 class="p-heading blue">Agent Stake President Assignment</h3>
-   						<p class="main-content">The effort to launch Pathway in an area can gain traction when a stake president either volunteers or is delegated to take the lead. Generally this means completing and submitting an <a style="color:#dc4831;;" href="request-a-site.html">application to formally request Pathway,</a> coordinating the selection of <a style="color:#dc4831;" href="#">Church Service Missionaries</a> to administer the program, and serving as a point of contact for BYU-Idaho until service missionaries are in place.</p>
-   						<p class=""><a style="color:#dc4831;" href="roles-responsibilities.html">Learn more</a> about the roles of Pathway service missionaries, and download the <a style="color:#dc4831;;" href="#">Church Service Missionary Form.</a></p>
+   						<p class="main-content">The effort to launch Pathway in an area can gain traction when a stake president either volunteers or is delegated to take the lead. Generally this means completing and submitting an <a style="color:#dc4831;;" href="request-a-site.html">application to formally request Pathway,</a> coordinating the selection of <a style="color:#dc4831;" href="roles-responsibilities.html#roleofpathwaymissionaries" target="_blank">Church Service Missionaries</a> to administer the program, and serving as a point of contact for BYU-Idaho until service missionaries are in place.</p>
+   						<p class=""><a style="color:#dc4831;" href="roles-responsibilities.html#roleofpathwaymissionaries" target="_blank">Learn more</a> about the roles of Pathway service missionaries, and download the <a style="color:#dc4831;" href="http://www.byui.edu/Documents/Admin_Offices/Online%20Learning/Online%20Instruction/Pathway_Site_Application-3.pdf" target="_blank">Church Service Missionary Form.</a></p>
    					</div>
    					<div class="pf-section no-icon">
    						<h3 class="p-heading blue">Pathway Group Types and Locations</h3>
    						<h4 class="p-heading2 blue">GROUP TYPES</h4>
-   						<p>Pathway may be offered to one or more group types. Students are assigned to a group at the time of admission, and assignments are based primarily on age. (Age 18-30 group, Age 31+ group, and Age 18+ group (international sites only).</p>
+   						<p>Pathway may be offered to one or more group types. Students are assigned to a group at the time of admission, and assignments are based primarily on age. (Age 18-30 group, Age 31+ group, and Age 18+ group (international sites only)).</p>
    						<h4 class="p-heading2 blue">GATHERING LOCATION(S)</h4>
    						<p>As part of the application, a single gathering place that is central to all participating stakes should be selected for each group type. Gatherings take place weekly during the first year of the program and occur on Thursday evenings. For Pathway to be most successful, a minimum of 15 applicants (for a given group) is required to start a new class.</p>
    						<p><span class="p-heading4 blue">Age 18-30 Group: </span> Gatherings are best suited at an institute building or a Church facility where institute classes are taught.</p>
@@ -206,12 +206,11 @@
           <li class="active"> <a href="getting-started.html"> <span class="caret"></span> Getting Started</a> </li>
           <li> <a href="roles-responsibilities.html"> <span class="caret"></span> Roles &amp; Responsibilities</a>
           </li>
-          <li> <a href="implementation.html"> <span class="caret"></span> Program Implementation</a>
+          <li> <a href="request-a-site.html"> <span class="caret"></span> Request a Site</a>
           </li>
           <li> <a href="../testimonials/testimonials.html"> <span class="caret"></span> The Pathway Experience</a>
           </li>
-          <li> <a href="request-a-site.html"> <span class="caret"></span> Request a Site</a>
-          </li>
+
         </ul>
       </div>
     </div>
