--- a/pages/speaking_partners/guidelines.html
+++ b/pages/speaking_partners/guidelines.html
@@ -122,15 +122,15 @@
    				</div>
    				<div class="pf-section no-icon">
    					<h2 id="HowPathwayWorks" class="subheading green">Speaking Partner Guidelines</h2>
-   					<h3 class="p-heading green">Please Note:</h3>
-   					<p>It is NOT required or necessary to study all of the information in this document in order to volunteer as a speaking partner. The most important thing you can do is meet with your partner and let them speak English to you and with you. However, the following guidelines may be of especial interest to those wanting to improve their teaching, tutoring, or foreign language-learning skills.</p>
+   				
+   					<p>It is NOT required or necessary to study all of the information in this document in order to volunteer as a speaking partner. The most important thing you can do is meet with your partner and let them speak English to you and with you. However, the following guidelines may be of interest to those wanting to improve their teaching, tutoring, or foreign language-learning skills.</p>
 
-            <h3 class="p-heading green">Volunteer Role</h3>
+            <h3 class="p-heading green">English Speaker Role</h3>
             <p>Most language learning takes place in a formal face-to-face classroom setting. However, in the Pathway English Language Program, we have the challenge of accomplishing the same learning goals in an online setting. Speaking and real-time communication are among the most important skills in learning a new language.</p>
 
             <div id="video-info-block">
             <img alt="play-button" class="play-button img-responsive" src="../../img/speaking-partners-main/speakingpartner_playbutton.png">
-            <p class="note green">Watch the video below to learn more about the role of Volunteers</p>
+            <p class="note green">Watch the video below to learn more about the English speaker role</p>
             </div>
 
             <div class="responsive-video-container sp">
@@ -140,11 +140,11 @@
             <p>You, as a speaking partner, play a significant role by allowing the Pathway student to practice these skills on a regular basis.</p>
 
             <h3 class="p-heading green">Authentic Language and Interaction</h3>
-            <p>The term “authentic language” means that the speakers are engaged in a natural conversation, listening attentively, and responding with interest. In other words, speaking partners should not try to slow down excessively to accommodate the student, nor should they modify their speech to simplify their English. However, speaking partners should still be aware of their speech, avoid speaking too rapidly, using excessive slang, or using unnecessary ambiguity (see van Lier, 1996; personal communication, van Lier, 2011). Using commonly-used phrases and words is helpful for the students. Keep in mind that the more naturally you speak, the more authentic your language will be—which, in turn, will be of greater benefit to the student.</p>
+            <p>The term “authentic language” means that the speakers are engaged in a natural conversation, listening attentively, and responding with interest. In other words, speaking partners should not try to slow down excessively to accommodate the student, nor should they modify their speech to simplify their English. However, speaking partners should be aware of their speech and avoid speaking too rapidly, using excessive slang, or using unnecessary ambiguity (see van Lier, 1996; personal communication, van Lier, 2011). Using commonly-used phrases and words is helpful for the students. Keep in mind that the more naturally you speak, the more authentic your language will be—which, in turn, will be of greater benefit to the student.</p>
 
             <div id="video-info-block">
             <img alt="play-button" class="play-button img-responsive" src="../../img/speaking-partners-main/speakingpartner_playbutton.png">
-            <p class="note green">Watch the video below to learn more about the role of Volunteers</p>
+            <p class="note green">Watch the video below to learn more about the English speaker role</p>
             </div>
 
             <div class="responsive-video-container sp">
@@ -158,7 +158,7 @@
 
             <p>As a speaking partner, you should encourage your Pathway student to take the lead in your discussions and provide opportunities for him or her to do so.</p>
 
-            <p>Most Pathway English Language students have little exposure to native or fluent English speakers —or at least, not enough to really progress in their language skills. For this reason, you are providing the best opportunity for these students to both listen to and speak English.</p>
+            <p>Most Pathway English language students have little exposure to native or fluent English speakers—or at least, not enough to really progress in their language skills. For this reason, you are providing the best opportunity for these students to both listen to and speak English.</p>
 
             <h3 class="p-heading green">Remember the following points about your language interaction:</h3>
             <p>
@@ -181,7 +181,7 @@
             </div>
 
             <h3 class="p-heading green">References</h3>
-            <div style="font-style:italic;">
+            <div style="font-style:italic; font-size:80%;">
               <p>Krashen, S. (1982). Principles and practice in second language learning. Oxford, UK: Pergamon.</p>
               <p>Krashen, S. (1985). The input hypothesis: Issues and implications.
               London, UK: Longman.</p>
@@ -283,7 +283,7 @@
             </div>
 
             <h3 class="p-heading green">References</h3>
-            <div style="font-style:italic;">
+            <div style="font-style:italic; font-size:80%;">
               <p>Deci, E. (1975). Intrinsic motivation. New York, NY: Plenum Press.</p>
               <p>Dörnyei, Z. & Csizér, K. (1998). Ten commandments for motivating language learners: Results of an empirical study. Language Teaching Research, 2, 203–229.</p>
             </div>
@@ -291,8 +291,7 @@
             <h3 class="p-heading green">Building Appropriate Relationships</h3>
             <p>The purpose of the Speaking Partner Program is to provide English speaking and listening practice for the Pathway English Language students. It is not appropriate for you to use this occasion to practice your foreign language skills. Also remember that you are not the student’s instructor. In fact, the best way to look at your role is to consider yourself as meeting with a friend to discuss what they are learning about in their course.</p>
 
-            <p>The “For the Strength of Youth” pamphlet provides counsel on how to be a good friend, which speaking partners should strive to follow while working with the student. It states: “A true friend will encourage you to be your best self. … Show interest in others and let them know you care about them. Treat everyone with kindness and respect” (The Church of Jesus Christ of Latter-day Saints, 2011). The perfect example of this type of friend is the Savior. President Eyring (2010)
-            explained that we also “become His friends as we serve others for Him. … His motives are pure. … The perfect friend, Jesus Christ, is completely selfless in offering happiness to others” (Eyring, 2010; see also D&C 84:77, Matt 25:40). Let the Savior be your perfect guide to building this relationship with the students.</p>
+            <p>The “For the Strength of Youth” pamphlet provides counsel on how to be a good friend, which speaking partners should strive to follow while working with the student. It states: “A true friend will encourage you to be your best self.... Show interest in others and let them know you care about them. Treat everyone with kindness and respect” (The Church of Jesus Christ of Latter-day Saints, 2011). The perfect example of this type of friend is the Savior. President Eyring (2010) explained that we also “become His friends as we serve others for Him.... His motives are pure.... The perfect friend, Jesus Christ, is completely selfless in offering happiness to others” (Eyring, 2010; see also D&C 84:77, Matt 25:40). Let the Savior be your perfect guide to building this relationship with the students.</p>
 
             <p>If any serious problems do occur, or if, for some reason, the relationship is not appropriate, please contact us so we can guide you as to the procedure you should follow.</p>
 
@@ -306,16 +305,16 @@
             </div>
 
             <h3 class="p-heading green">References</h3>
-            <div style="font-style:italic;">
+            <div style="font-style:italic; font-size:80%;">
               <p>The Church of Jesus Christ of Latter-day Saints. (2011). For the strength of youth: Friends. Retrieved from https://lds.org/youth/for-thestrength-ofyouth/friends?lang=eng.</p>
               <p>Eyring, H. B. (July 2010). Faithful friends. Liahona. Retrieved from 
               https://lds.org/liahona/2010/07/faithful-friends?lang=eng.</p>
             </div>
 
             <h3 class="p-heading green">Cultural Paradigms & Behaviors</h3>
-            <p>It is important to understand that the situation of your speaking partner might be very different to your own; they likely have grown up with a different approach to education, in a different socio-economic environment, and with very different values, standards, and norms regarding time management, what is considered polite, etc. Therefore, it is necessary to be patient with your Pathway student, as they too are being patient with you as they strive to learn.</p>
+            <p>It is important to understand that the situation of your speaking partner might be very different to your own. They likely have grown up with a different approach to education; in a different socio-economic environment; and with very different values, standards, and norms regarding time management, what is considered polite, etc. Therefore, it is necessary to be patient with your Pathway student, as they too are being patient with you as they strive to learn.</p>
 
-            <p>This cultural exchange is one of the major joys and purposes of the Speaking Partner Program—learning to communicate across cultures is just as valuable, if not more so, than just learning the English language. Thus, it is important to note that culture is not simply sombreros, bowing to superiors, or a July 4th parade; culture runs deep into the minds and lives of every human being and differs according to one’s exposure to varying world experiences.</p>
+            <p>This cultural exchange is one of the major joys and purposes of the Speaking Partner Program—learning to communicate across cultures is just as valuable, if not more so, than learning the English language. Thus, it is important to note that culture is not simply sombreros, bowing to superiors, or a July 4th parade; culture runs deep into the minds and lives of every human being and differs according to one’s exposure to varying world experiences.</p>
 
             <p>Things to be Aware of:</p>
 
@@ -325,7 +324,7 @@
 
             <h3 class="p-heading2 green">Confrontation/Politeness</h3>
 
-            <p>Some cultures will do anything to avoid confrontation, disagreement, or to say "no" to even a suggested appointement time. Some students might seem to drop off the radar because offense was taken where none was meant; therefore, be very sensitive and try to read the confidence and feelings of your partner.</p>
+            <p>Some cultures will do anything to avoid confrontation, disagreement, or to say "no" to even a suggested appointment time. Some students might seem to drop off the radar because offense was taken where none was meant; therefore, be very sensitive and try to read the confidence and feelings of your partner.</p>
 
             <h3 class="p-heading2 green">Technological Capacity</h3>
 
