--- a/pages/what_is_pathway/l_version/cost.html
+++ b/pages/what_is_pathway/l_version/cost.html
@@ -79,7 +79,7 @@
 				<nav id="siteNavigation" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li class="nav-1"><a href="../../testimonials/testimonials.html">Testimonials</a></li>
-						<li class="nav-2"><a href="../../what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+						<li class="nav-2 nav_active"><a href="../../what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
 						<li class="nav-3"><a href="#join">Join Pathway</a></li>
 						<li class="nav-4"><a href="../../speaking_partners/what-is-speaking-partners.html">SPEAKING PARTNERS</a></li>
 						<li class="nav-5"><a href="../../local_leaders/using-pathway.html">Local Leaders</a></li>
@@ -138,7 +138,7 @@
 
 				<p>Pathway students who pursue a degree through BYU-Idaho's Online Degree Program after Pathway continue to pay their local Pathway tuition rate. Pathway tuition may increase annually.</p>
 
-				<p>Pathway students who choose to continue their education on-campus after Pathway will pay regular on-campus tuition.</p>
+				<p>Pathway students who choose to continue their education on campus after Pathway will pay regular on campus tuition.</p>
 				
 				<h3 id="FinancialAid" class="p-heading turquoise">Financial Aid</h3>
 				<p>Financial aid is not available for Pathway students during their first year. However, U.S. students who have a high school diploma or GED may apply for federal financial aid after they complete Pathway and if they are accepted into a degree-seeking program.</p>
