--- a/pages/what_is_pathway/l_version/cost_calc_tuition.html
+++ b/pages/what_is_pathway/l_version/cost_calc_tuition.html
@@ -79,7 +79,7 @@
 				<nav id="siteNavigation" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li class="nav-1"><a href="../../testimonials/testimonials.html">Testimonials</a></li>
-						<li class="nav-2"><a href="../../what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+						<li class="nav-2 nav_active"><a href="../../what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
 						<li class="nav-3"><a href="#join">Join Pathway</a></li>
 						<li class="nav-4"><a href="../../speaking_partners/what-is-speaking-partners.html">SPEAKING PARTNERS</a></li>
 						<li class="nav-5"><a href="../../local_leaders/using-pathway.html">Local Leaders</a></li>
@@ -129,13 +129,12 @@
 				<div class="main-content">
 				<p>Tuition is based on location and the number of BYU-Idaho course credits a student takes each semester.</p> 
 
-				<p class="p-heading3 red">COURSE CREDIT:</p><p class="info-block">  a measurement used to quantify the load of work for a specific course and enables universities to set a requirement to graduate.</p>
+				<p class="p-heading3 red">COURSE CREDIT:</p><p class="info-block">  A measurement used to quantify the load of work for a specific course that enables universities to set a requirement to graduate.</p>
 				<br>
 				<br>
 				<p>Pathway L version courses are 5 credits each.</p>
 
-				<img class="img-responsive img-space" src="../../../img/calculate-tuition/tuition_formula.png" alt="tuition-formula" width="100%">
-
+				
 				<!-- <p>In the fall and winter semesters, Age 18-30 groups and Age 18+ groups complete 3 BYU-Idaho online credits at the local tuition rate and 2 institute credits at no charge. In spring semester, these students do not take an institute class, but instead complete 5 BYU-Idaho online credits.</p>
 				<p>Age 31+ groups complete 5 BYU-Idaho online credits in each of the 3 semesters.</p> -->
 				</div>
