--- a/pages/what_is_pathway/s_version/HPW.html
+++ b/pages/what_is_pathway/s_version/HPW.html
@@ -64,7 +64,7 @@
     <nav id="siteNavigation" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li class="nav-1"><a href="../../testimonials/testimonials.html">Testimonials</a></li>
-        <li class="nav-2"><a href="../../what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+        <li class="nav-2 nav_active"><a href="../../what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
         <li class="nav-3"><a href="#join">Join Pathway</a></li>
         <li class="nav-4"><a href="../../speaking_partners/what-is-speaking-partners.html">SPEAKING PARTNERS</a></li>
         <li class="nav-5"><a href="../../local_leaders/using-pathway.html">Local Leaders</a></li>
