mid-day build 2

--- a/pages/local_leaders/getting-started.html
+++ b/pages/local_leaders/getting-started.html
@@ -54,7 +54,7 @@
           src="../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img id="pathway-mobile-logo" src="../../img/mobile-logo.png"></a>
         </li>
         <li class="header-column pull-right">
-          <a class="header_contact hidden-xs pull-left" href="#contactUs">Contact Us <img src="../../img/speechbubble.png" 
+          <a class="header_contact hidden-xs pull-left" href="../advising-and-support.html">Contact Us <img src="../../img/speechbubble.png" 
 
             width="13" height="11" alt="speech"></a>
             <form class="navbar-right pull-right">
