--- a/pages/pathway-faq.html
+++ b/pages/pathway-faq.html
@@ -51,7 +51,7 @@
 					src="../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../index.htm"><img id="pathway-mobile-logo" src="../img/mobile-logo.png"></a>
 				</li>
 				<li class="header-column pull-right">
-					<a class="header_contact hidden-xs pull-left" href="#contactUs">Contact Us <img src="../img/speechbubble.png" 
+					<a class="header_contact hidden-xs pull-left" href="../pages/advising-and-support.html">Contact Us <img src="../img/speechbubble.png" 
 
 						width="13" height="11" alt="speech"></a>
 						<form class="navbar-right pull-right">
@@ -113,7 +113,7 @@
       <div class="pf-section"> <a id="wip-section"></a>
         <div id="pathway-faq">
          <br>
-        <h2 class="subheading">Pathway FAQ's</h2>
+        <h2 class="subheading">Pathway</h2>
         <h3 class="p-heading red"><a onClick="expand('what_is_pathway')"  >What is Pathway?</a></h3>
         <p class="collapsible" id="what_is_pathway">Designed to give students the confidence and skills needed to succeed in college, Pathway is a low-cost educational opportunity that combines online courses with local gatherings. The program takes three semesters, or one year, to complete and can lead to professional certificates and degrees.</p>
         <h3 class="p-heading red"><a onClick="expand('how_long_does')"  >How long does it take to complete Pathway?</a></h3>
@@ -175,11 +175,11 @@
         <h3 class="p-heading red"><a onClick="expand('in_my_area')"  >How can I get Pathway in my area? </a></h3>
         <p class="collapsible" id="in_my_area">Local priesthood leaders can apply to have a Pathway site in their area by completing an <a href="local_leaders/request-a-site.html" target="_blank">online application.</a></p>
       </div>
-      <br>
       <a id="advising-section"></a>
+      <br>
       <div id="pathway-advising-faq">
       
-      <h2 class="subheading">Pathway Advising FAQs</h2>
+      <h2 class="subheading">Pathway Advising</h2>
       <h3 class="p-heading red"><a onClick="expand('am_i_required')"  >Am I required to do Pathway if I already have an associate degree, or can I start the Online Degree Program instead?</a></h3>
       <p class="collapsible" id="am_i_required">In order to be eligible to begin the BYU-Idaho Online Degree Program, students must have at least 15 credits from a CES school (BYU, BYU-I, BYU-H, LDSBC).  If your associate degree is from one of the Church schools, you can by-pass Pathway.  However, if you don’t meet the requirement of 15 CES credits, you will need to complete Pathway before you will be eligible to apply for the Online Degree Program.</p>
       <h3 class="p-heading red"><a onClick="expand('if_i_have')"  >If I have already taken a Book of Mormon course at an institute of religion, am I still required to take the Book of Mormon course with Pathway?</a></h3>
@@ -190,12 +190,13 @@
       <p class="collapsible" id="what_happens_if">If you fail a course, you will need to retake it. As a Pathway student, you cannot begin the Online Degree Program unless you have passed every course and have at least a 3.0 cumulative GPA. However, Pathway students can apply to campus with less than a 3.0 GPA if all application requirements (ACT, transcripts, essays, etc.) are met. If Pathway students earn a 3.0 GPA, these requirements are waived when applying to campus.  If you have completed Pathway with no failing grades, but do not meet the 3.0 cumulative GPA requirement, you will need to retake your courses with the lowest grades to qualify for the Online Degree Program. </p>
       <h3 class="p-heading red"><a onClick="expand('can_i_retake')"  >Can I retake a class?</a></h3>
       <p class="collapsible" id="can_i_retake">Retake options for Pathway courses may be available for you. If you want to take advantage of these courses and continue, contact the<a href="http://www.byui.edu/pathway/pathway-advising" target="_blank"> Pathway Support.</a></p>
-      <br>
     </div>
     <a id="after-section"></a>
+    <br>
+    <br>
     <div id="after_pathway">
     
-    <h2 class="subheading">After Pathway FAQ's</h2>
+    <h2 class="subheading">After Pathway</h2>
     <h3 class="p-heading red"><a onClick="expand('what_after_pathway')"  >What do I do after Pathway?</a></h3>
     <p class="collapsible" id="what_after_pathway">Following the completion of Pathway, you may apply to join the BYU-Idaho Online Degree Program, attend BYU-Idaho as an on-campus student, or enroll in a local college or university.</p>
     <h3 class="p-heading red"><a onClick="expand('what_is_mat')"  >What is matriculation?</a></h3>
@@ -310,10 +311,10 @@
 <div class="col-xs-6 col-sm-4 sidebar-offcanvas pull-right" id="sidebar" role="navigation">
   <div class="pf-sidebar header NoAffix footnote" id="sideNav" role="complementary">
     <ul class="nav green pf-sidenav">
-      <li> <a class="jump_anchor" href="#wip-section"> <span class="caret"></span> What is Pathway FAQ's</a> </li>
-      <li> <a class="jump_anchor" href="#advising-section"> <span class="caret"></span> Pathway Advising FAQ's</a> </li>
-      <li> <a class="jump_anchor" href="#after-section"> <span class="caret"></span> After Pathway FAQ's</a> </li>
-      <li> <a class="jump_anchor" href="#sp-section"> <span class="caret"></span> Speaking Partner FAQ's</a> </li>
+      <li> <a class="jump_anchor" href="#wip-section"> <span class="caret"></span> Pathway</a> </li>
+      <li> <a class="jump_anchor" href="#advising-section"> <span class="caret"></span> Pathway Advising</a> </li>
+      <li> <a class="jump_anchor" href="#after-section"> <span class="caret"></span> After Pathway </a> </li>
+      <li> <a class="jump_anchor" href="#sp-section"> <span class="caret"></span> Speaking Partner</a> </li>
     </ul>
   </div>
 </div>
