--- a/pages/speaking_partners/what-is-speaking-partners.html
+++ b/pages/speaking_partners/what-is-speaking-partners.html
@@ -54,7 +54,7 @@
           src="../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img id="pathway-mobile-logo" src="../../img/mobile-logo.png"></a>
         </li>
         <li class="header-column pull-right">
-          <a class="header_contact hidden-xs pull-left" href="#contactUs">Contact Us <img src="../../img/speechbubble.png" 
+          <a class="header_contact hidden-xs pull-left" href="../advising-and-support.html">Contact Us <img src="../../img/speechbubble.png" 
 
             width="13" height="11" alt="speech"></a>
             <form class="navbar-right pull-right">
@@ -162,7 +162,7 @@
       <div class="pf-sidebar header NoAffix footnote" id="sideNav" role="complementary">
         <ul class="nav green pf-sidenav">
           <li class="active"> <a href="what-is-speaking-partners.html"> <span class="caret"></span> What is the Speaking Partner Program?</a> </li>
-          <li> <a href="#login"> <span class="caret"></span> Sign Up / Find A Partner</a> </li>
+          <li> <a href="https://web.byui.edu/SpeakingPartners/Volunteer/"> <span class="caret"></span> Sign Up / Find A Partner</a> </li>
           <li> <a href="discussion-materials.html"> <span class="caret"></span> Discussion Materials</a>
           </li>
           <li> <a href="guidelines.html"> <span class="caret"></span> Speaking Partner Guidelines</a>
