--- a/pages/advising-and-support.html
+++ b/pages/advising-and-support.html
@@ -54,7 +54,7 @@
 					src="../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../index.htm"><img id="pathway-mobile-logo" src="../img/mobile-logo.png"></a>
 				</li>
 				<li class="header-column pull-right">
-					<a class="header_contact hidden-xs pull-left" href="#contactUs">Contact Us <img src="../img/speechbubble.png" width="13" height="11" alt="speech"></a>
+					<a class="header_contact hidden-xs pull-left" href="../pages/advising-and-support.html">Contact Us <img src="../img/speechbubble.png" width="13" height="11" alt="speech"></a>
 						<form class="navbar-right pull-right">
 							<button type="submit" class="btn signin-btn">
 								SIGN IN
@@ -94,7 +94,7 @@
 				<div id="breadCrumb" class="breadCrumb module">
 					<ul>
 						<li class="first"><a href="../index.htm">Home</a></li>
-						<li class="last lowercase">Pathway Support</li>
+						<li class="last">Pathway Support</li>
 					</ul>
 				</div>
 			</div>
@@ -105,7 +105,7 @@
 
 <div id="main-container" class="container">
 	<div class="row row-offcanvas row-offcanvas-right">
-		<div class="col-xs-12 col-sm-8 main-content">
+		<div class="col-xs-12 main-content">
 				<div class="hero pf-page-header">
 				<img style="margin-top:20px" src="../img/advising/symbol_telephone.png" alt="supportLogo"> 
 				<h1 id="Standard" class="page-title">Pathway Support</h1>
