--- a/pages/what_is_pathway/what_is_pathway.html
+++ b/pages/what_is_pathway/what_is_pathway.html
@@ -51,7 +51,7 @@
 				<a class="navbar-brand img-responsive hidden-xs" href="../../index.htm"><img id="pathway-logo" width="280px" src="../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img id="pathway-mobile-logo" src="../../img/mobile-logo.png"></a>
 				</li>
 				<li class="header-column pull-right">
-					<a class="header_contact hidden-xs pull-left" href="#contactUs">Contact Us <img src="../../img/speechbubble.png" width="13" height="11" alt="speech"></a>
+					<a class="header_contact hidden-xs pull-left" href="../advising-and-support.html">Contact Us <img src="../../img/speechbubble.png" width="13" height="11" alt="speech"></a>
 						<form class="navbar-right pull-right">
 							<button type="submit" class="btn signin-btn">
 								SIGN IN
@@ -76,7 +76,7 @@
 				<nav id="siteNavigation" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li class="nav-1"><a href="../testimonials/testimonials.html">Testimonials</a></li>
-						<li class="nav-2"><a href="../what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+						<li class="nav-2 nav_active"><a href="../what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
 						<li class="nav-3"><a href="#join">Join Pathway</a></li>
 						<li class="nav-4"><a href="../speaking_partners/what-is-speaking-partners.html">SPEAKING PARTNERS</a></li>
 						<li class="nav-5"><a href="../local_leaders/using-pathway.html">Local Leaders</a></li>
